# switchboard

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  index.html  tailwind-import.css  tailwind.config.js
docs/: index.html  switchboard-3a7d06f25e3d8322.js  switchboard-3a7d06f25e3d8322_bg.wasm  switchboard-684e601a3a3ee75c.js  switchboard-684e601a3a3ee75c_bg.wasm  switchboard-b7cddc053a9c5341_bg.wasm  switchboard-e9ce7aad3fa07ce9_bg.wasm  tailwind-eb210381846049d.css  tailwind-f23437d61425ed2d.css
src/: api_endpoint.rs  main.rs  storage.rs
src/components/: button_bar.rs  chat_input.rs  chat_interface.rs  chat_message.rs  chatlog.rs  config_interface.rs  mod.rs  saving_interface.rs
src/models/: chatlog.rs  config.rs  dark_mode.rs  is_editing_config.rs  is_response_pending.rs  is_saving_chatlog.rs  mod.rs  system_message.rs
