[package]
name = "switchboard"
version = "0.0.1"
edition = "2024"
build = "build.rs"

[dependencies]
ammonia = "4.1.0"
anyhow = "1.0.98"
chrono = "0.4.41"
console_error_panic_hook = "0.1.7"
markdown = "1.0.0"
reqwasm = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
sycamore = { version = "0.9.1", features = ["futures", "serde"] }
uuid = { version = "1.17.0", features = ["v4", "v7", "js"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Storage", "Navigator", "ClipboardEvent", "File", "FileReader", "DataTransfer", "DataTransferItem", "DataTransferItemList"] }

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
opt-level = 's'
lto = true


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(sycamore_force_ssr)"] }
